--- a/School Kit/Base.lproj/Main.storyboard
+++ b/School Kit/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VHc-rW-rXM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -42,10 +43,10 @@
             </objects>
             <point key="canvasLocation" x="1117" y="352"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="dFs-QW-NLt">
             <objects>
-                <viewController id="yRJ-Ti-D7f" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="yRJ-Ti-D7f" customClass="ClassSelectionViewController" customModule="School_Kit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YSg-Ue-wLW"/>
                         <viewControllerLayoutGuide type="bottom" id="GdM-qg-lyj"/>
@@ -54,17 +55,158 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nXm-1a-qiR">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nXm-1a-qiR">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" textLabel="H6n-KD-cUp" detailTextLabel="Zco-JF-0Ue" style="IBUITableViewCellStyleValue1" id="OAQ-CK-iMX">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OAQ-CK-iMX" id="2Nh-lk-1Xz">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="H6n-KD-cUp">
+                                                    <rect key="frame" x="15" y="12" width="31.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zco-JF-0Ue">
+                                                    <rect key="frame" x="529" y="12" width="56" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="lAh-Lw-wpL" kind="show" id="ONT-yX-A7J"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yRJ-Ti-D7f" id="NKy-Ri-kJo"/>
+                                    <outlet property="delegate" destination="yRJ-Ti-D7f" id="GXh-T9-F0a"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="nXm-1a-qiR" secondAttribute="trailing" constant="-20" id="3rf-u8-LA8"/>
+                            <constraint firstItem="GdM-qg-lyj" firstAttribute="top" secondItem="nXm-1a-qiR" secondAttribute="bottom" id="SS3-nd-5Oz"/>
+                            <constraint firstItem="nXm-1a-qiR" firstAttribute="leading" secondItem="eD4-BI-4gK" secondAttribute="leadingMargin" constant="-20" id="jYB-yz-A1N"/>
+                            <constraint firstItem="nXm-1a-qiR" firstAttribute="top" secondItem="YSg-Ue-wLW" secondAttribute="bottom" id="ykn-sJ-fBb"/>
+                        </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="sKT-BA-iAP"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Title" id="rIj-35-1TO">
+                        <barButtonItem key="rightBarButtonItem" title="Options" style="plain" id="UII-uY-WjJ">
+                            <connections>
+                                <action selector="onTappedOptionsButton:" destination="yRJ-Ti-D7f" id="InB-cB-HmP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="classSelectionTableView" destination="nXm-1a-qiR" id="0BB-pc-YJ8"/>
+                        <outlet property="optionsButton" destination="UII-uY-WjJ" id="ORm-WM-QK9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bb5-lL-vGB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1757" y="352"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="W82-80-1WO">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="lAh-Lw-wpL" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="01F-kt-RMD"/>
+                        <viewControllerLayoutGuide type="bottom" id="CnK-9l-DbW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OYR-8O-5Sq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="POB-sP-98N">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="5kR-9i-Dq3" style="IBUITableViewCellStyleDefault" id="zjF-8F-J1L">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zjF-8F-J1L" id="YrP-gz-Q9b">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5kR-9i-Dq3">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="OnF-0s-t60" kind="show" id="7UV-JO-0VM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="bHb-yf-s0D" style="IBUITableViewCellStyleDefault" id="QZO-Np-M5Q">
+                                        <rect key="frame" x="0.0" y="66" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QZO-Np-M5Q" id="rOl-gZ-6L3">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bHb-yf-s0D">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CnK-9l-DbW" firstAttribute="top" secondItem="POB-sP-98N" secondAttribute="bottom" id="HcW-uk-m5T"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="POB-sP-98N" secondAttribute="trailing" constant="-20" id="lZu-bq-4jf"/>
+                            <constraint firstItem="POB-sP-98N" firstAttribute="leading" secondItem="OYR-8O-5Sq" secondAttribute="leadingMargin" constant="-20" id="pLQ-hB-yzA"/>
+                            <constraint firstItem="POB-sP-98N" firstAttribute="top" secondItem="01F-kt-RMD" secondAttribute="bottom" id="xEM-fa-ZCS"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1vZ-yJ-Fnj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2435" y="352"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mdK-B8-B6l">
+            <objects>
+                <viewController id="OnF-0s-t60" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vhq-DQ-4za"/>
+                        <viewControllerLayoutGuide type="bottom" id="R5k-nS-cDb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ISU-8Q-9po">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KTK-Zg-co0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3097" y="352"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="exx-tV-G7A">
