--- a/School Kit/Base.lproj/Main.storyboard
+++ b/School Kit/Base.lproj/Main.storyboard
@@ -44,6 +44,57 @@
             </objects>
             <point key="canvasLocation" x="1040.5" y="351.5"/>
         </scene>
+        <!--Notes View Controller-->
+        <scene sceneID="8Kc-fN-peH">
+            <objects>
+                <viewController id="MjD-kZ-SNI" customClass="NotesViewController" customModule="School_Kit" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Gl-uV-GpZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="1bM-u3-R5Y"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Bff-MS-mJV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S1O-iR-XK2">
+                                <rect key="frame" x="97" y="322" width="335" height="211"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lpR-j9-oFs">
+                                <rect key="frame" x="100" y="20" width="328" height="278"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="IZF-eq-1dV" appends="YES" id="4fc-HJ-9DS"/>
+                        </connections>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" systemItem="camera" id="IN5-sl-qSX">
+                            <connections>
+                                <action selector="cameraButtonTapped:" destination="MjD-kZ-SNI" id="PgE-zZ-ia9"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="imageView" destination="S1O-iR-XK2" id="Vfb-W4-zVr"/>
+                        <outlet property="textView" destination="lpR-j9-oFs" id="vB1-sc-USv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zbz-cW-oiO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="IZF-eq-1dV">
+                    <pressTypeMask key="allowedPressTypes"/>
+                    <connections>
+                        <action selector="onScreenTapped:" destination="MjD-kZ-SNI" id="qYU-CT-Kzu"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1040" y="1200"/>
+        </scene>
         <!--Title-->
         <scene sceneID="dFs-QW-NLt">
             <objects>
